# jenkins_p

./: .gitignore  Jenkinsfile  README.md  pyproject.toml  sample_input.csv
src/jenkins_practice/: calc.py  validate.py  validator.py
tests/: test_calc.py  test_validator.py
