[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenkins-practice-pytest"
version = "0.1.0"
description = "Small pytest project for Jenkins practice"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
